# p2p-ddns

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  LICENCE  README.md
.github/workflows/: ci.yml  docker-integration.yml  release.yml
packaging/systemd/: p2p-ddns-wrapper  p2p-ddns.default  p2p-ddns.service
scripts/: build_deb.sh  cleanup_docker_p2p_it.sh  package_release.sh
src/: app.rs  client_daemon_protocol.rs  host.rs  lib.rs  main.rs  network.rs  protocol.rs  state.rs  storage.rs  types.rs  utils.rs
src/admin/: authz.rs  handler.rs  http.rs  mod.rs  protocol.rs  server.rs
src/cli/: args.rs  mod.rs  output.rs  paths.rs
src/domain/: client.rs  merge.rs  message.rs  mod.rs  node.rs  ticket.rs
src/hosts/: mod.rs
src/net/: mod.rs  p2p_protocol.rs
src/storage/: mod.rs
src/util/: mod.rs
tests/: admin_handler.rs  admin_http.rs  admin_unix_socket.rs  cli_modes.rs  cross_subnet_sync_local.rs  docker_p2p.rs  hosts_sync.rs  local_join_sync.rs  local_join_sync_ipv6.rs  p2p_lifecycle.rs
tests/integration/: BUG_FIX.md  IMPROVEMENTS_COMPLETED.md  IMPROVEMENTS_SUMMARY.md  Makefile  NETWORK_CONTROL_IMPLEMENTATION.md  QUICK_REFERENCE.md  README.md  RUST_VERSION_FIX.md  RUST_VERSION_NOTES.md  SINGLE_MACHINE_TEST_GUIDE.md  SUCCESS_SUMMARY.md  TESTING_USAGE.md  TROUBLESHOOTING.md  USAGE.md  docker-compose.simple.yml  docker-compose.test.yml  docker-compose.yml  example-test.sh  quick-test.sh  single-machine-test.sh  test-array-test.sh
tests/integration/networks/: cleanup-networks.sh  create-networks.sh  network-control.sh
tests/integration/nodes/base/: Dockerfile
tests/integration/nodes/client/: Dockerfile  entrypoint.sh
tests/integration/nodes/daemon/: Dockerfile  entrypoint.sh
tests/integration/nodes/primary/: Dockerfile  entrypoint.sh
tests/integration/scripts/: build-images-simple.sh  build-images.sh  health-check.sh  p2p-matrix.sh  run-tests.sh  test-scenarios-clean.sh  test-scenarios-enhanced.sh  test-scenarios-fixed.sh  test-scenarios-working.sh  test-scenarios.sh  validate.sh
