[package]
name = "p2p-ddns"
version = "0.0.9" # almost done :)
edition = "2024"

[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
bytes = "1.10.1"
clap = { version = "4.5.32", features = ["derive"] }
dashmap = "6.1.0"
dirs = "6.0.0"
env_logger = "0.11.7"
iroh = { version = "0.95.1", default-features = false, features = ["discovery-local-network", "discovery-pkarr-dht"] }
iroh-gossip = "0.95.0"
log = "0.4.26"
parking_lot = "0.12.3"
postcard = "1.1.1"
rand = "0.9"
redb = "2.4.0"
serde = "1.0.219"
tabled = { version = "0.18.0", features = ["std", "ansi", "derive"]}
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "time"] }
futures = "0.3.31"

[dev-dependencies]
tempfile = "3.19.0"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "s"
panic = "abort"
strip = "symbols"
